# ragas_testset_generation

./: .gitignore  Readme.md  pyproject.toml  run.sh  testset.csv
ragas/: ragas_testset_generation.py
