[tool.poetry]
name = "llamaindexexp"
version = "0.1.0"
description = ""
authors = ["anand-kamble <anandmk837@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
llama-index = "^0.10.43"
fitz = "^0.0.1.dev2"
pymupdf = "^1.24.5"
llama-index-llms-ollama = "^0.1.5"
llama-index-embeddings-huggingface = "^0.2.1"
llama-index-embeddings-instructor = "^0.1.3"
llama-index-callbacks-arize-phoenix = "^0.1.5"
arize-phoenix = {extras = ["evals"], version = "^4.3.0"}
ragas = "^0.1.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
